force-app/main/default/objects/Enrollment_Meeting__c/fields/Stage_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Stage_Reasons__c</fullName>
    <label>Stage Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Advisor will conduct meeting</fullName>
            </value>
            <value>
                <fullName>Not enough total employees</fullName>
            </value>
            <value>
                <fullName>Not enough eligible employees</fullName>
            </value>
            <value>
                <fullName>Company has financial advising experience</fullName>
            </value>
            <value>
                <fullName>Owner anticipates low participation</fullName>
            </value>
            <value>
                <fullName>Owner providing education</fullName>
            </value>
            <value>
                <fullName>Onboarding plan</fullName>
            </value>
            <value>
                <fullName>Updgrade</fullName>
            </value>
            <value>
                <fullName>Health check</fullName>
            </value>
            <value>
                <fullName>Ongoing servicing</fullName>
            </value>
            <value>
                <fullName>New hires</fullName>
            </value>
            <value>
                <fullName>EEs are already educated about 401k plans</fullName>
            </value>
            <value>
                <fullName>Cannot get all employees together at same time</fullName>
            </value>
            <value>
                <fullName>No show</fullName>
            </value>
            <value>
                <fullName>Scheduling conflict</fullName>
            </value>
            <value>
                <fullName>Plan sponsor is ill</fullName>
            </value>
            <value>
                <fullName>Advisor covered content</fullName>
            </value>
            <value>
                <fullName>Not enough employees to join</fullName>
            </value>
            <value>
                <fullName>No longer interested</fullName>
            </value>
            <value>
                <fullName>Plan Contact Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Vitamin(k)</fullName>
                <isActive>false</isActive>
                <label>Vitamin(k)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>