force-app/main/default/objects/Enrollment_Meeting__c/fields/Terminated_Employees__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Employees__c</fullName>
    <description>Number of Terminated Employees on Census</description>
    <inlineHelpText>Number of Terminated Employees on Census</inlineHelpText>
    <label>Terminated Employees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>