force-app/main/default/objects/Enrollment_Meeting__c/fields/Terminated_w_Balance__c.field-meta.xml
<CustomField>
    <fullName>Terminated_w_Balance__c</fullName>
    <description>Number of Terminated Employees with a Balance</description>
    <inlineHelpText>Number of Terminated Employees with a Balance</inlineHelpText>
    <label>Terminated w Balance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>