force-app/main/default/objects/Enrollment_Meeting__c/fields/UBQT_User_Who_Ran_Meeting__c.field-meta.xml
<CustomField>
    <fullName>UBQT_User_Who_Ran_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UBQT User Who Ran Meeting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>