force-app/main/default/objects/Enrollment_Meeting__c/fields/UBQT_Who_Ran_Meeting__c.field-meta.xml
<CustomField>
    <fullName>UBQT_Who_Ran_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify UBQT contact who ran the meeting</description>
    <inlineHelpText>Identify UBQT contact who ran the meeting</inlineHelpText>
    <label>UBQT: Who Ran Meeting</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a contact on the Decimal Account</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Decimal</value>
        </filterItems>
        <infoMessage>You must select a contact on the Decimal Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Meetings (UBQT: Who Ran Meeting)</relationshipLabel>
    <relationshipName>Enrollment_Meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>