force-app/main/default/objects/Enrollment_Meeting__c/fields/UBQT_Who_requested_meeting__c.field-meta.xml
<CustomField>
    <fullName>UBQT_Who_requested_meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If UBQT contact requested meeting, add them here</description>
    <inlineHelpText>If UBQT contact requested meeting, add them here</inlineHelpText>
    <label>UBQT: Who requested meeting</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select Contact/User from Decimal Inc. DBA Ubiquity Retirement + Savings</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Decimal Inc. DBA Ubiquity Retirement + Savings</value>
        </filterItems>
        <infoMessage>Must select Contact/User in Decimal Inc. DBA Ubiquity Retirement + Savings account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Meetings</relationshipLabel>
    <relationshipName>Enrollment_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>