force-app/main/default/objects/Enrollment_Meeting__c/fields/Vesting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Vesting_Schedule__c</fullName>
    <description>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</description>
    <inlineHelpText>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</inlineHelpText>
    <label>Vesting Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>20% Over 6 Years</fullName>
            </value>
            <value>
                <fullName>20% Over 5 Years</fullName>
            </value>
            <value>
                <fullName>25% Over 4 Years</fullName>
            </value>
            <value>
                <fullName>2 Year Cliff</fullName>
            </value>
            <value>
                <fullName>3 Year Cliff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>