force-app/main/default/objects/Enrollment_Meeting__c/fields/What_Was_Unclear_Missing__c.field-meta.xml
<CustomField>
    <fullName>What_Was_Unclear_Missing__c</fullName>
    <description>What was unclear to client during meeting - what was missing that would have been good to have?</description>
    <inlineHelpText>What was unclear to client during meeting - what was missing that would have been good to have?</inlineHelpText>
    <label>What Was Unclear/Missing?</label>
    <type>TextArea</type>
</CustomField>