force-app/main/default/objects/Enrollment_Meeting__c/fields/What_Went_Well__c.field-meta.xml
<CustomField>
    <fullName>What_Went_Well__c</fullName>
    <description>Confirm what went well during the enrollment / education meeting</description>
    <inlineHelpText>Confirm what went well during the enrollment / education meeting</inlineHelpText>
    <label>What Went Well?</label>
    <type>TextArea</type>
</CustomField>