force-app/main/default/objects/Enrollment_Meeting__c/fields/X1st_Payroll_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>X1st_Payroll_Uploaded__c</fullName>
    <formula>Implementation__r.X1st_Payroll_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Payroll Uploaded</label>
    <type>Date</type>
</CustomField>