force-app/main/default/objects/Enrollment_Meeting__c/recordTypes/Enrollment_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Enrollment_Meeting</fullName>
    <active>true</active>
    <label>Enrollment Meeting</label>
</RecordType>