force-app/main/default/objects/Enrollment_Meeting__c/validationRules/Meeting_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_Date_Required</fullName>
    <active>true</active>
    <description>Must enter date for Meeting Date</description>
    <errorConditionFormula>AND
(
ISPICKVAL( Status__c , &quot;Completed&quot;),
ISPICKVAL( Stage__c, &quot;Completed&quot;),

(OR(
ISBLANK(  Meeting_Date__c  ))))</errorConditionFormula>
    <errorMessage>Verify the &quot;Meeting Date&quot; field - date the meeting took place or info was sent to client/advisor</errorMessage>
</ValidationRule>