force-app/main/default/objects/Enrollment_Meeting__c/validationRules/Require_Saver_Rate_Data_Kit_Delivered.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Saver_Rate_Data_Kit_Delivered</fullName>
    <active>true</active>
    <description>Require Saver Rate Data when Stage/Status = Completed OR Status = Completed w/ Meeting Type = Enrollment Kit Only</description>
    <errorConditionFormula>AND
(
ISPICKVAL( Status__c , &quot;Completed&quot;),
NOT(INCLUDES( Meeting_Type__c , &quot;Enrollment Kit only&quot;)),

(OR(
ISBLANK( Number_of_Employees__c ),
ISBLANK( Number_of_Eligible_Employees__c ),
ISBLANK( Number_of_employees_contributing__c ),
ISBLANK( Number_of_employees_with_a_balance__c ),
ISBLANK( Terminated_Employees__c ),
ISBLANK( Terminated_w_Balance__c ))))</errorConditionFormula>
    <errorMessage>One or more &quot;Meeting Data&quot; fields are missing.   ALL fields in the left hand column of the Meeting Data section are required.</errorMessage>
</ValidationRule>