force-app/main/default/objects/Enrollment_Meeting__c/listViews/Requested_Enrollment_Meetings.listView-meta.xml
<ListView>
    <fullName>Requested_Enrollment_Meetings</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Enrollment_Meeting_Contact__c</columns>
    <columns>Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Requested Enrollment Meetings</label>
</ListView>